--- a/docker/ansible/templates/compose-modules/n8n.yml
+++ b/docker/ansible/templates/compose-modules/n8n.yml
@@ -42,6 +42,10 @@ services:
       - "traefik.http.routers.n8n-rtr.service=n8n"
       ### Enable the server port
       - "traefik.http.services.n8n.loadbalancer.server.port=5678"
+      ## Router for Gatus — bypass auth if secret header is present
+      - "traefik.http.routers.n8n-monitor-rtr.rule=Host(`n8n.$DOMAINNAME`) && Headers(`X-Monitor-Key`, `$GENERIC_MONITORING_HEADER_SECRET`)"
+      - "traefik.http.routers.n8n-monitor-rtr.service=n8n"
+      - "traefik.http.routers.n8n-monitor-rtr.priority=100"  # Higher priority so it matches first
 
   n8n-db:
     image: docker.io/library/postgres:17.6-alpine@sha256:ef257d85f76e48da1c64832459b59fcaba1a4dac97bf5d7450c77753542eee94
