--- a/docker/ansible/templates/compose-modules/metube.yml
+++ b/docker/ansible/templates/compose-modules/metube.yml
@@ -45,6 +45,10 @@ services:
       - "traefik.http.routers.metube-rtr.service=metube"
       # Enable the management port
       - "traefik.http.services.metube.loadbalancer.server.port=8081"
+      ## Router for Gatus — bypass auth if secret header is present
+      - "traefik.http.routers.metube-monitor-rtr.rule=Host(`metube.$DOMAINNAME`) && Headers(`X-Monitor-Key`, `$GENERIC_MONITORING_HEADER_SECRET`)"
+      - "traefik.http.routers.metube-monitor-rtr.service=metube"
+      - "traefik.http.routers.metube-monitor-rtr.priority=100"  # Higher priority so it matches first
     tmpfs:
       - /metube-temp-dir:size=4G,uid=${PUID},gid=${PGID},mode=1700
 
