--- a/docker/ansible/templates/compose-modules/tubesync.yml
+++ b/docker/ansible/templates/compose-modules/tubesync.yml
@@ -36,6 +36,10 @@ services:
       - "traefik.http.routers.tubesync-rtr.service=tubesync"
       # Enable the management port
       - "traefik.http.services.tubesync.loadbalancer.server.port=4848"
+      ## Router for Gatus — bypass auth if secret header is present
+      - "traefik.http.routers.tubesync-monitor-rtr.rule=Host(`tubesync.$DOMAINNAME`) && Headers(`X-Monitor-Key`, `$GENERIC_MONITORING_HEADER_SECRET`)"
+      - "traefik.http.routers.tubesync-monitor-rtr.service=tubesync"
+      - "traefik.http.routers.tubesync-monitor-rtr.priority=100"  # Higher priority so it matches first
 
 volumes:
   tubesync_data:
