--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -32,6 +32,11 @@
       '/(^|/)kubernetes/.+\\.ya?ml(?:\\.j2)?$/',
     ],
   },
+  "docker-compose": {
+    "managerFilePatterns": [
+      "(^|/)docker/ansible/templates/compose-modules/.+\\.ya?ml(?:\\.j2)?$"
+    ]
+  },
   'helm-values': {
     managerFilePatterns: [
       '/(^|/)ansible/.+\\.ya?ml(?:\\.j2)?$/',
