--- a/docker/ansible/playbooks/update-docker.yaml
+++ b/docker/ansible/playbooks/update-docker.yaml
@@ -15,6 +15,7 @@
         cmd: "docker compose down foldingathome 2>&1"
         chdir: /srv/docker
       when: inventory_hostname in groups['external']
+      failed_when: false
 
     - include_tasks: ../tasks/get-home-ip.yaml
     - include_tasks: ../tasks/configure-ufw.yaml
