--- a/docker/ansible/playbooks/update-os.yaml
+++ b/docker/ansible/playbooks/update-os.yaml
@@ -10,6 +10,7 @@
         cmd: "docker compose down foldingathome 2>&1"
         chdir: /srv/docker
       when: inventory_hostname in groups['external']
+      failed_when: false
 
     - include_tasks: ../tasks/new-server.yaml
     - include_tasks: ../tasks/update-dotfiles.yaml
