--- a/docker/ansible/templates/compose-modules/open-webui.yml
+++ b/docker/ansible/templates/compose-modules/open-webui.yml
@@ -56,7 +56,7 @@ services:
       # Enable the management port
       - "traefik.http.services.open-webui.loadbalancer.server.port=8080"
       ## Router for Gatus — bypass auth if secret header is present
-      - "traefik.http.routers.open-webui-monitor-rtr.rule=Host(`chat.$DOMAINNAME`) && Headers(`X-Monitor-Key`, `$GENERIC_MONITORING_HEADER_SECRET`)"
+      - "traefik.http.routers.open-webui-monitor-rtr.rule=Host(`chat.$DOMAINNAME`) && Header(`X-Monitor-Key`, `$GENERIC_MONITORING_HEADER_SECRET`)"
       - "traefik.http.routers.open-webui-monitor-rtr.service=open-webui"
       - "traefik.http.routers.open-webui-monitor-rtr.priority=100"  # Higher priority so it matches first
 
