--- a/.archive/docker/ansible/templates/compose-modules/phpmyadmin.yml
+++ b/.archive/docker/ansible/templates/compose-modules/phpmyadmin.yml
@@ -30,7 +30,7 @@ services:
       - "traefik.http.routers.phpmyadmin-rtr.service=phpmyadmin-svc"
       - "traefik.http.services.phpmyadmin-svc.loadbalancer.server.port=80"
       ## Router for Gatus — bypass auth if secret header is present
-      - "traefik.http.routers.phpmyadmin-monitor-rtr.rule=Host(`phpmyadmin.$DOMAINNAME`) && Headers(`X-Monitor-Key`, `$GENERIC_MONITORING_HEADER_SECRET`)"
+      - "traefik.http.routers.phpmyadmin-monitor-rtr.rule=Host(`phpmyadmin.$DOMAINNAME`) && Header(`X-Monitor-Key`, `$GENERIC_MONITORING_HEADER_SECRET`)"
       - "traefik.http.routers.phpmyadmin-monitor-rtr.service=phpmyadmin-svc"
       - "traefik.http.routers.phpmyadmin-monitor-rtr.priority=100"  # Higher priority so it matches first
 
