Implement dawari + public endpoint

--- a/docker/ansible/inventory/group_vars/all/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/all/secrets.sops.yml
@@ -14,6 +14,8 @@ generic__hostnames_desktop: ENC[AES256_GCM,data:ArBBm1Yx7Yv5wVEULQ==,iv:gT32ebod
 generic__svlnas_smb_server: ENC[AES256_GCM,data:xnPCGSTaKRrywIcE,iv:UBTkwES+DiFBccO41b9zInZEcnovqqehONX4trjwBIk=,tag:QjNzhYwuIoKprTRzkTxSvA==,type:str]
 #ENC[AES256_GCM,data:YG9EYvk=,iv:ohKGrqHgUEt6J+ZAoyU4SCcFufLBpXDMR879XuIW+/Y=,tag:MTsrOlfHI3eN1CDpeaS9CQ==,type:comment]
 generic__ips_svlext: ENC[AES256_GCM,data:skLtCu4jEeajbsmKQA==,iv:sEt7nbRvR4lBDzk4pjLFIkh6OI/GBK8TyKv05amN8k0=,tag:mav7JOP10xWc/AMIlbraQw==,type:str]
+#ENC[AES256_GCM,data:BbnLB6mq7g==,iv:7TMfJfjqYxgy1q+eE3csJQ6tOra1zzzLdODSX56yhMo=,tag:T0MLRp7YThTz5KVNEVsQBQ==,type:comment]
+generic__public_https_port: ENC[AES256_GCM,data:/Jvnq3M=,iv:B50VhmjHP1/MVWKOUy3RVShMjy4GAB2hL9Y+QmRNTJA=,tag:Pc8Z15B8ISmW+2C+Z7JduA==,type:int]
 #ENC[AES256_GCM,data:rNMVlLOS7A==,iv:oaQzgp9JXKULW7T6d+VJYfQS6+kweWwEkxRbPA6ExLE=,tag:BYCxExn+ElvS+EggLjETwA==,type:comment]
 generic__entra_id_tenant_id: ENC[AES256_GCM,data:CWjTvVrdhbOZBP5SLvlUzVVQ5XNJzVoCWC3G3mGNKzbDwtaP,iv:VEHfVxxHRyZkX8M2MSIJfRU4Pc7qP7mbGbKz5aIFD1U=,tag:O2Vd57FeBzt04ctHbLl+DQ==,type:str]
 generic__entra_id_issuer_url: ENC[AES256_GCM,data:KmtydCVb6Y/CMxrtrDp32ocjO5ODFe8o/yHs1Y+RkWuXR59lNX8SBeHdMonPaZWaWCg2Wh0hDQpKakSFIrPUjwXNLMVSgMC29e4o,iv:W/hMNhXwVHns/K+fIIeq626m9nlHRkrnCaIwwTkndRU=,tag:csuW+2EKOADJsYV925TpoA==,type:str]
@@ -55,8 +57,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-11T12:24:32Z"
-    mac: ENC[AES256_GCM,data:NEkE++1FS+3zWgNmMKj+gJ8udlotZIKS4OhisJIDh7ecgwm/SINWpfhC51qQzrONa2ZFXHyP/FhNaI7qUEvhYpG58ZANTLUGM6IpkNho4SeI0w+lqb8P9JVEfDph434f3useoEEKlmwZw3TLPkhB+jvi3/EnKX5WvDg4swVEbPg=,iv:DYOLgJezbSPNFm7oQjXL+mz98PJP54oxDy1bVtdLPOg=,tag:ELI/8nafUPD99EbErPv+IQ==,type:str]
+    lastmodified: "2025-11-15T21:18:56Z"
+    mac: ENC[AES256_GCM,data:wkKod90KLv9xkBb3KSBRdy7alkAp9V9MH3TSgOIFWbD0S1QVuy8Qe92EoZqfYljhFHEyDUpdgBT/aVer+fL3/QBb5Y/IMPJ2Xnnh0wj7jK+dSCVmrqcUPk4W/uQe2RPbltsONWQ0nb5CVEU8MrRfd2IMhi16dQ60gYiFXvF7PN0=,iv:vVdbu9jn6jrIfjyYiL0U/FtiLaxFn8YO6W8GOMa9avY=,tag:6wFkVM6wCtIwbQY2WU4iMw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
