--- a/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
@@ -29,6 +29,9 @@ apps__cloudflare_api_token: ENC[AES256_GCM,data:aieSwhsRuq4zfO2Lpf8BlfCi7Rc082p5
 apps__cloudflare_domain_1_fqdn: ENC[AES256_GCM,data:AIJRErwDsji8wyolcbY=,iv:Jr/OkD0djXq1k1yE01g1zpEjjwKaLe8l24xbVEvzMz0=,tag:UfvCs1qexiU4VgwMH2AbeQ==,type:str]
 apps__cloudflare_domain_1_zone_id: ENC[AES256_GCM,data:imUGalb7ET8hzDjIl4ObMSlJfoFJmR+LfJs8Fbv/voI=,iv:fDukJ+yAi0v/5hmi3cH8U9yvU8xCyru//3uTAgegXEs=,tag:GkzAmS3vr90L+Ni/KXbEQw==,type:str]
 apps__cloudflare_domain_1_obfuscated_fqdn: ENC[AES256_GCM,data:tQ2soLZHHwQq86/xy5dcApGv3swZYAjZQ+iIyEK7G7XcElwucDb6to7XGLzvTdA=,iv:9ly0pDd18Kd9XC+a6HIPzILgExESAsapdEW42n3ai3M=,tag:0Z8uiwHrHNMZp6DZ4aw+xw==,type:str]
+#ENC[AES256_GCM,data:HMBUUQiArH6+yQ==,iv:O6zgSBVsW28S7D1rwxP0FMzlRIzjs7C4/EDwiCIUtyI=,tag:1l0kp2pN4iZ5vK+8oWNmDg==,type:comment]
+apps__dawarich_db_password: ENC[AES256_GCM,data:dtOfOJol6cr7pqAYHb5bdvot/K4d25MVxijVhUB6fxrblyx1Za9DvAcWGfC5Y7IO1wRs/5jhCd1GIQ01dOvPgw==,iv:8NN7XD3HEjAdutQZBiV6xE9LWsPqZRD55VT+8CdCreo=,tag:I+durrH9x8eNJjK5oQs/3w==,type:str]
+apps__dawarich_secret_key_base: ENC[AES256_GCM,data:Q3ufeTjxwXxb1k1EY2uNmeSAfvbkSL9xQHw6T7XeM8nZu/S0Qgmjc9kiGEHdamn4uyJvU6KWhYl6uzsan7pkbBTWjmFUd698CJSXzSL5pubn3RQ1+GFjilimnmYionJIPruqy6BAQh8oZQJk/0b8oJD7Vlta7k7rTaHRzhiIe+M=,iv:+cYdF+3ectgW/Qv5nLPYBwP5S/uTaeiBEpJlbfJ4Hzk=,tag:tAXIsjNvBrzUnnTaR3POeg==,type:str]
 #ENC[AES256_GCM,data:MehGkhRqA0PHx4C4Up2H1T4=,iv:wWGH41feg086f/u6iNMCdZ+L6YL01CKFzRL90LSsntk=,tag:U42fAO3XU7+tranvPDSs8g==,type:comment]
 apps__folding_at_home_account_token: ENC[AES256_GCM,data:mcUn09M1jtvX7v/UsZwTjeEZNCn4k9ofIQh8H5n6gu3hNNeBP7TlgFHBDQ==,iv:0W8+Bs+52pVSEaOll3EIIrSWE2UYOwWc2luQGvYw75E=,tag:UhzF3os65A76VsyQM7C6pQ==,type:str]
 #ENC[AES256_GCM,data:yRaJRAn4+zBY,iv:NQCesx+yLdItfkNMevFUpGZRBxqvj+g2Gl41H6gjdXA=,tag:2Ul4hjjTcpnz1ZR62mszOw==,type:comment]
@@ -162,8 +165,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-11T11:45:52Z"
-    mac: ENC[AES256_GCM,data:JTONS1IAfKmlV7wbSsEpZmo0UJMUhSuUYkwHMg4/iNaoegtFgNopMUoKjzAfdOxfakfAErrosQUI5ABDTNoSv8YboVTijShlgLGX0pssrfjUGM1dnNXWfIPWoCXFXuQexmr+e1NSusGB7+lPeaTXANf1f6PTrCMrerkCXa4m86E=,iv:CAVtfOV9Sb42OkwwgrJKJbg9+4pAgzkBEjU4PLQF/TM=,tag:iYoVn+muuTMiT7LXF/s7Qg==,type:str]
+    lastmodified: "2025-11-15T23:37:56Z"
+    mac: ENC[AES256_GCM,data:Ndhcv9qdpb64P4VCd2mQTkCkNfvK/hcLO4soqSdCPM+Kiq+Bv9rG4R8utfNCwv6wsMVwAX+xFDEY3eXC9Nt8StqEP4Ea6uWatxG6iCgPi0JBgq4Oy4jKJTM6d7xNpGueRfoOOALkSUziq70hjTtdFtz+PIWUZ3xo/30h9efNnoM=,iv:+dBCs+eI0wz2YXm3AvzHRAT7Ob+1KEtj+Xo0Jfa+AJg=,tag:29xANHp3Zlb6VkOJfMLI2A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
